--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-numpy
-pyrubberband
-essentia
-yodel
-madmom
+Cython==0.29.36
+essentia==2.1b6.dev374
+madmom==0.16.1
+mido==1.3.3
+numpy==1.19.0
+pyrubberband==0.4.0
+PyYAML==6.0.1
+scipy==1.6.3
+typer==0.14.0
+typing-extensions==4.7.1
+yodel==0.3.0
